--- a/index.html
+++ b/index.html
@@ -236,7 +236,26 @@
         </div>
       </div>
     </header>
-    <main class="md:container md:mx-auto"></main>
+    <main class="md:container md:mx-auto">
+      <section class="mt-6 lg:mt-40">
+        <div class="text-center space-y-2">
+          <h1 class="text-2xl lg:text-5xl font-semibold">
+            Fetured Bikes In This Year
+          </h1>
+          <p class="text-sm font-semibold text-[#E76F51]">
+            Best bike collection
+          </p>
+        </div>
+
+        <div
+          class="flex flex-col lg:flex-row mt-14 items-center lg:justify-around"
+        >
+          <div><img src="images/others/feature-bike.png" alt="" /></div>
+          <div><img src="images/others/feature-bike.png" alt="" /></div>
+          <div><img src="images/others/feature-bike.png" alt="" /></div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
