--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
         </div>
       </div>
     </header>
+    <!-- main -->
     <main class="md:container md:mx-auto">
+      <!-- feature section -->
       <section class="mt-6 lg:mt-40">
         <div class="text-center space-y-2">
           <h1 class="text-2xl lg:text-5xl font-semibold">
@@ -253,6 +255,60 @@
           <div><img src="images/others/feature-bike.png" alt="" /></div>
           <div><img src="images/others/feature-bike.png" alt="" /></div>
           <div><img src="images/others/feature-bike.png" alt="" /></div>
+        </div>
+      </section>
+      <!-- latest section -->
+      <section class="mt-11 lg:mt-32">
+        <h2 class="text-2xl lg:text-5xl font-semibold text-center">
+          latest Bikes
+        </h2>
+        <!-- card -->
+        <div class="flex flex-col lg:flex-row gap-5 justify-center lg:mt-12">
+          <!-- 1st card -->
+          <div class="p-5 shadow-md w-[377px]">
+            <img src="images/others/latest1.png" alt="" />
+            <h3 class="text-[28px] font-semibold mt-10">Ducati XDIAVEL S-73</h3>
+            <p class="text-[#6C6C6C] text-base font-normal mt-2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+              fermentum amet <br />
+              faucibus sed id nisi lectus at.
+            </p>
+            <button
+              class="mt-10 btn lg:w-40 lg:h-16 bg-bike-primary text-[#fff] text-xl lg:font-bold"
+            >
+              Read More
+            </button>
+          </div>
+          <!-- 2nd card -->
+          <div class="p-5 shadow-md w-[377px]">
+            <img src="images/others/latest2.png" alt="" />
+            <h3 class="text-[28px] font-semibold mt-10">Ducati XDIAVEL S-73</h3>
+            <p class="text-[#6C6C6C] text-base font-normal mt-2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+              fermentum amet <br />
+              faucibus sed id nisi lectus at.
+            </p>
+            <button
+              class="mt-10 btn lg:w-40 lg:h-16 bg-bike-primary text-[#fff] text-xl lg:font-bold"
+            >
+              Read More
+            </button>
+          </div>
+          <!-- 3rd card -->
+          <div class="p-5 shadow-md w-[377px]">
+            <img src="images/others/latest3.png" alt="" />
+            <h3 class="text-[28px] font-semibold mt-10">Ducati XDIAVEL S-73</h3>
+            <p class="text-[#6C6C6C] text-base font-normal mt-2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+              fermentum amet <br />
+              faucibus sed id nisi lectus at.
+            </p>
+            <button
+              class="mt-10 btn lg:w-40 lg:h-16 bg-bike-primary text-[#fff] text-xl lg:font-bold"
+            >
+              Read More
+            </button>
+          </div>
         </div>
       </section>
     </main>
