--- a/index.html
+++ b/index.html
@@ -311,6 +311,146 @@
           </div>
         </div>
       </section>
+      <!-- happy client -->
+      <section class="mt-7 lg:m-32">
+        <h2 class="text-2xl lg:text-5xl font-semibold text-center">
+          Happy <span class="text-[#E76F51]">Clients says</span>
+        </h2>
+        <div class="flex flex-col lg:flex-row gap-5 lg:gap-11 m-5 lg:mt-12">
+          <!-- 1st card -->
+          <div
+            class="justify-center text-center w-[322] py-10 px-9 border-[1px] border-[#DEDEDE] rounded-md"
+          >
+            <div class="items-center p-7">
+              <img src="images/others/user-1.png" alt="" />
+            </div>
+            <p class="text-[#6C6C6C] text-base font-normal mb-4">
+              Slate helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+            <div class="rating mb-4">
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+            </div>
+            <h4 class="text-[#23A6F0] text-sm font-semibold mb-4">
+              Regina Miles
+            </h4>
+            <h4 class="text-sm font-semibold">Banker</h4>
+          </div>
+          <!-- 2nd card -->
+          <div
+            class="justify-center text-center w-[322] py-10 px-9 border-[1px] border-[#DEDEDE] rounded-md"
+          >
+            <div class="items-center p-7">
+              <img src="images/others/user-2.png" alt="" />
+            </div>
+            <p class="text-[#6C6C6C] text-base font-normal mb-4">
+              Slate helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+            <div class="rating mb-4">
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+            </div>
+            <h4 class="text-[#23A6F0] text-sm font-semibold mb-4">
+              Regina Miles
+            </h4>
+            <h4 class="text-sm font-semibold">Banker</h4>
+          </div>
+          <!-- 3rd card -->
+          <div
+            class="justify-center text-center w-[322] py-10 px-9 border-[1px] border-[#DEDEDE] rounded-md"
+          >
+            <div class="items-center p-7">
+              <img src="images/others/user-3.png" alt="" />
+            </div>
+            <p class="text-[#6C6C6C] text-base font-normal mb-4">
+              Slate helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+            <div class="rating mb-4">
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+                checked
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+              <input
+                type="radio"
+                name="rating-2"
+                class="mask mask-star-2 bg-orange-400"
+              />
+            </div>
+            <h4 class="text-[#23A6F0] text-sm font-semibold mb-4">
+              Regina Miles
+            </h4>
+            <h4 class="text-sm font-semibold">Banker</h4>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
