--- a/index.html
+++ b/index.html
@@ -451,6 +451,85 @@
           </div>
         </div>
       </section>
+      <!-- FAQ -->
+      <section>
+        <h2 class="text-2xl lg:text-5xl font-semibold text-center">
+          Frequently Asked <span class="text-[#E76F51]">Questions</span>
+        </h2>
+        <div
+          class="flex flex-col lg:flex-row items-center justify-center gap-24 mt-12"
+        >
+          <!-- left  -->
+          <div class="mx-7 lg:m-5">
+            <img src="images/others/faq.png" alt="" />
+          </div>
+          <!-- right -->
+          <div>
+            <div class="join join-vertical m-5 lg:m-1 lg:w-[560px]">
+              <!-- .......1st Q....... -->
+              <div
+                class="collapse collapse-arrow join-item border border-base-300"
+              >
+                <input type="radio" name="my-accordion-4" checked="checked" />
+                <div class="collapse-title text-xl font-medium">
+                  What are the most important things I should <br />
+                  know about riding a bike?
+                </div>
+                <div class="collapse-content">
+                  <p class="text-[#7E848C] text-base">
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <br />
+              <!-- .......2nd Q......... -->
+              <div
+                class="collapse collapse-arrow join-item border border-base-300"
+              >
+                <input type="radio" name="my-accordion-4" checked="checked" />
+                <div class="collapse-title text-xl font-medium">
+                  How can I tell if my helmet is old and I <br />
+                  need a new one?
+                </div>
+                <div class="collapse-content">
+                  <p>hello</p>
+                </div>
+              </div>
+              <br />
+              <!-- .......3rd Q......... -->
+              <div
+                class="collapse collapse-arrow join-item border border-base-300"
+              >
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-medium">
+                  My bike has been in storage is it safe <br />
+                  to ride?
+                </div>
+                <div class="collapse-content">
+                  <p>hello</p>
+                </div>
+              </div>
+              <br />
+              <!-- .......4th Q......... -->
+              <div
+                class="collapse collapse-arrow join-item border border-base-300"
+              >
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-medium">
+                  What rules should I follow when riding <br />
+                  my bike?
+                </div>
+                <div class="collapse-content">
+                  <p>hello</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
