--- a/index.html
+++ b/index.html
@@ -531,6 +531,40 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="mt-32">
+      <div
+        class="flex flex-col lg:flex-row lg:justify-between px-4 lg:px-36 py-4 lg:py-14 items-center bg-[#0B0D17]"
+      >
+        <!-- left -->
+        <div class="text-white space-y-5 text-base">
+          <ul class="flex gap-6">
+            <li>Download Now</li>
+            <li>License</li>
+          </ul>
+
+          <ul class="flex gap-2 lg:gap-6">
+            <li>About</li>
+            <li>Features</li>
+            <li>Pricing</li>
+            <li>Pricing</li>
+            <li>Help</li>
+            <li>Privacy Policy</li>
+          </ul>
+          <p class="text-[#0B0D17] lg:text-white text-sm">
+            © 2020 bike. All rights reserved
+          </p>
+        </div>
+
+        <!-- right -->
+        <div class="space-y-4">
+          <p class="text-white">Get the App</p>
+          <img class="w-32 h-10" src="images/others/ios.png" alt="" />
+          <img class="w-32 h-10" src="images/others/android.png" alt="" />
+        </div>
+        <p class="text-sm lg:hidden text-white m-3">
+          © 2020 bike. All rights reserved
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
